# LearJNI

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/: jni_dynamic_load.cpp  jni_dynamic_load.h
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/example/myapplication/: DynamicLoadActivity.java
app/src/main/java/com/example/myapplication/load/: JNIDynamicLoad.java
gradle/wrapper/: gradle-wrapper.properties
